# ProjectProcess

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.py  build.sh
include/: mylibrary.h
src/: main.cpp  mylibrary.cpp
